--- a/index.html
+++ b/index.html
@@ -278,8 +278,7 @@
                 loop
                 height="100%"
               >
-                <!-- Your video file here -->
-                <source src="static/videos/carousel1.mp4" type="video/mp4" />
+                <source src="static/videos/video1.mp4" type="video/mp4" />
               </video>
             </div>
             <div class="item item-video2">
@@ -292,8 +291,7 @@
                 loop
                 height="100%"
               >
-                <!-- Your video file here -->
-                <source src="static/videos/carousel2.mp4" type="video/mp4" />
+                <source src="static/videos/video2.mp4" type="video/mp4" />
               </video>
             </div>
             <div class="item item-video3">
@@ -307,10 +305,23 @@
                 height="100%"
               >
                 \
-                <!-- Your video file here -->
-                <source src="static/videos/carousel3.mp4" type="video/mp4" />
+                <source src="static/videos/video3.mp4" type="video/mp4" />
               </video>
             </div>
+            <div class="item item-video4"></div>
+              <video
+                poster=""
+                id="video4"
+                autoplay
+                controls
+                muted
+                loop
+                height="100%"
+              >
+                \
+                <source src="static/videos/video4.mp4" type="video/mp4" />
+              </video>
+            </div> 
           </div>
         </div>
       </div>
