--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
     <!-- Replace the content tag with appropriate information -->
     <meta name="description" content="DESCRIPTION META TAG" />
-    <meta property="og:title" content="Sportify Demo" />
+    <meta property="og:title" content="Sportify website" />
     <meta
       property="og:description"
       content="SOCIAL Sportify: Question Answering with Embedded Visualizations and Personified
@@ -140,7 +140,7 @@
                   </span> -->
 
                   <!-- Github link -->
-                  <span class="link-block">
+                  <!-- <span class="link-block">
                     <a
                       href="https://github.com/YOUR REPO HERE"
                       target="_blank"
@@ -151,9 +151,9 @@
                       </span>
                       <span>Code (Coming Soom)</span>
                     </a>
-                  </span>
+                  </span> -->
 
-                  <span class="link-block">
+                  <!-- <span class="link-block">
                     <a
                       href="https://github.com/YOUR REPO HERE"
                       target="_blank"
@@ -164,7 +164,7 @@
                       </span>
                       <span>Demo (Coming Soom)</span>
                     </a>
-                  </span>
+                  </span> -->
 
                   <!-- ArXiv abstract Link -->
                   <span class="link-block">
